<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_entry"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:paddingTop="10dp" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_date" />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="2016/04/07"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/bt_date"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="..." />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_item" />

        <Spinner
            android:id="@+id/sp_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:entries="@array/sp_item" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_cost" />

        <EditText
            android:id="@+id/et_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:ems="6"
            android:inputType="number"
            android:nextFocusLeft="@+id/et_memo"
            android:nextFocusRight="@+id/et_use" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_start_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_startname" />

        <EditText
            android:id="@+id/et_start_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:nextFocusLeft="@+id/et_desc"
            android:nextFocusRight="@+id/et_end_name" />

        <TextView
            android:id="@+id/tv_end_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_endname" />

        <EditText
            android:id="@+id/et_end_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:nextFocusLeft="@+id/et_start_name"
            android:nextFocusRight="@+id/et_memo" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
		android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_use"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />

        <EditText
            android:id="@+id/et_use"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:nextFocusLeft="@+id/et_cost"
            android:nextFocusRight="@+id/et_desc" />


        <EditText
            android:id="@+id/et_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:nextFocusLeft="@+id/et_use"
            android:nextFocusRight="@+id/et_start_name" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tv_start_time_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_starttime" />

        <TextView
            android:id="@+id/tv_start_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="12:00"
            android:layout_marginStart="10dp"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/bt_start_time"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="..." />

        <TextView
            android:id="@+id/tv_end_time_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_endtime" />

        <TextView
            android:id="@+id/tv_end_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="12:00"
            android:layout_marginStart="10dp"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/bt_end_time"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="..." />

    </LinearLayout>

    <EditText
        android:id="@+id/et_memo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:nextFocusLeft="@+id/et_end_name"
        android:nextFocusRight="@+id/et_cost" />


</LinearLayout>
